--- a/config/_default/languages.yaml
+++ b/config/_default/languages.yaml
@@ -1,11 +1,22 @@
-en:
-  languageName: "English"
-  languageCode: "en"
-  contentDir: "content"
-  weight: 1
+# Languages
+#   Create a section for each of your site's languages.
+#   Documentation: https://docs.hugoblox.com/reference/language/
 
-ja:
-  languageName: "日本語"
-  languageCode: "ja"
-  contentDir: "content/ja"
-  weight: 2
+# Default language
+en:
+  languageCode: en-us
+  # Uncomment for multi-lingual sites, and move English content into `en` sub-folder.
+  #contentDir: content/en
+
+# Uncomment the lines below to configure your website in a second language.
+#zh:
+#  languageCode: zh-Hans
+#  contentDir: content/zh
+#  title: Chinese website title...
+#  params:
+#    description: Site description in Chinese...
+#  menu:
+#    main:
+#      - name: 传
+#        url: '#about'
+#        weight: 1
