--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -3,8 +3,8 @@
 # Hugo Documentation: https://gohugo.io/getting-started/configuration/#all-configuration-settings
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
-title: Wowchemy Research Group # Website name
-baseURL: 'https://example.com/' # Website URL
+title: C2Lab - Cryogenic Computing Laboratory # Website name
+baseURL: 'https://c2lab-dev.github.io/' # Website URL
 
 ############################
 ## LANGUAGE
