--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: C2Lab - Cryogenic Computing Laboratory # Website name
-baseURL: 'https://c2lab-dev.github.io/' # Website URL
+baseURL: 'https://c2lab.org/' # Website URL
 
 ############################
 ## LANGUAGE
